syntax="proto2";
  
package yamcs.protobuf.filetransfer;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "FileTransferProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "yamcs/api/annotations.proto";
import "yamcs/protobuf/actions/actions.proto";

// This API deals with transmission (upload and download) of file to and from spacecraft.
// The API can be used to interface any implementation of the FileTransferService.
// One such implementation is for the CFDP - CCSDS File Delivery Protocol.
 
service FileTransferApi {

  // List file transfer services
  rpc ListFileTransferServices(ListFileTransferServicesRequest) returns (ListFileTransferServicesResponse) {
    option (yamcs.api.route) = {
      get: "/api/filetransfer/{instance}/services"
    };
  }

  // Get a file transfer service
  rpc GetFileTransferService(GetFileTransferServiceRequest) returns (FileTransferServiceInfo) {
    option (yamcs.api.route) = {
      get: "/api/filetransfer/{instance}/services/{serviceName}"
    };
  }

  // List transfers
  rpc ListTransfers(ListTransfersRequest) returns (ListTransfersResponse) {
    option (yamcs.api.route) = {
      get: "/api/filetransfer/{instance}/{serviceName}/transfers"
    };
  }
  
  // Get a transfer
  rpc GetTransfer(GetTransferRequest) returns (TransferInfo) {
    option (yamcs.api.route) = {
      get: "/api/filetransfer/{instance}/{serviceName}/transfers/{id}"
    };
  }
  
  // Create a transfer
  rpc CreateTransfer(CreateTransferRequest) returns (TransferInfo) {
    option (yamcs.api.route) = {
      post: "/api/filetransfer/{instance}/{serviceName}/transfers"
      body: "*"
    };
  }
  
  // Pause a transfer
  rpc PauseTransfer(PauseTransferRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      post: "/api/filetransfer/{instance}/{serviceName}/transfers/{id}:pause"
    };
  }

  // Cancel a transfer
  //
  // The ongoing transfer is aborted, partially uploaded/downloaded files
  // are retained.
  rpc CancelTransfer(CancelTransferRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      post: "/api/filetransfer/{instance}/{serviceName}/transfers/{id}:cancel"
    };
  }
  
  // Resume a transfer
  rpc ResumeTransfer(ResumeTransferRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      post: "/api/filetransfer/{instance}/{serviceName}/transfers/{id}:resume"
    };
  }
  
  // Subscribe to transfer updates
  rpc SubscribeTransfers(SubscribeTransfersRequest) returns (stream TransferInfo) {
    option (yamcs.api.websocket) = {
      topic: "file-transfers"
    };
  }

  // Subscribe to remote file list updates
  rpc SubscribeRemoteFileList(SubscribeTransfersRequest) returns (stream ListFilesResponse) {
    option (yamcs.api.websocket) = {
      topic: "remote-file-list"
    };
  }

  // Request file list from remote
  rpc FetchFileList(ListFilesRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      post: "/api/filetransfer/{instance}/{serviceName}/files:sync"
      body: "*"
    };
  }

  // Get latest file list
  rpc GetFileList(ListFilesRequest) returns (ListFilesResponse) {
    option (yamcs.api.route) = {
      get: "/api/filetransfer/{instance}/{serviceName}/files"
      field_mask_root: "files"
    };
  }

  // Run a file-specific action.
  //
  // Available actions are specific to the File Transfer implementation.
  rpc RunFileAction(RunFileActionRequest) returns (google.protobuf.Struct) {
    option (yamcs.api.route) = {
      post: "/api/filetransfer/{instance}/{serviceName}/files:runFileAction"
      body: "*"
    };
  }
}

enum TransferDirection {
  UPLOAD = 1;
  DOWNLOAD = 2;
}

enum TransferState {
  RUNNING = 1;
  PAUSED = 2;
  FAILED = 3;
  COMPLETED = 4;
  QUEUED = 5;
  CANCELLING = 6;
}

message TransactionId {
  optional uint32 sequenceNumber = 1;
  optional uint64 initiatorEntity = 2;
}

message ListFileTransferServicesRequest {
  // Yamcs instance name
  optional string instance = 1;
}

message GetFileTransferServiceRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 2;
}

message ListFileTransferServicesResponse {
  repeated FileTransferServiceInfo services = 1;
}

message FileTransferCapabilities {
  // Whether the transfer service supports uploads
  optional bool upload = 1;

  // Whether the transfer service supports downloads
  optional bool download = 2;

  // Whether the transfer service supports specifying an upload path
  optional bool remotePath = 4;

  // Whether the transfer service supports remote file listings
  optional bool fileList = 5;

  // Whether transfers contain a column describing the Transfer Type
  optional bool hasTransferType = 6;

  // Whether the transfer service supports pause/resume
  optional bool pauseResume = 9;

  // Additional columns to show in a file listing, where id
  // is a key of ``RemoteFile.extra``
  repeated ExtraColumnInfo fileListExtraColumns = 7;

  // Additional actions that may be executed on remote files
  repeated yamcs.protobuf.actions.ActionInfo fileActions = 8;
}

message ExtraColumnInfo {
  optional string id = 1;
  optional string label = 2;
}

message FileTransferServiceInfo {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string name = 2;
 
  repeated EntityInfo localEntities = 3;
  repeated EntityInfo remoteEntities = 4;
  optional FileTransferCapabilities capabilities = 5;
  repeated FileTransferOption transferOptions = 6;
}

message EntityInfo {
  optional string name = 1;
  optional uint64 id = 2;
}

message TransferInfo {
  //unique identifier assigned by the file transfer service
  optional uint64 id = 1;
  
  //when the transfer has started. Note that this will not be set for QUEUED transfers.
  optional google.protobuf.Timestamp startTime = 2;
  optional TransferState state = 3;

  optional string bucket = 4;
  optional string objectName = 5;

  optional string remotePath = 6;
  optional TransferDirection direction = 7;

  optional uint64 totalSize = 8;
  optional uint64 sizeTransferred = 9;
  
  //reliable = true -> class 2 transfer
  //reliable = false -> class 1 transfer
  optional bool reliable = 10;
  
  //in case the transcation is failed, this provides more information
  optional string failureReason = 11;

  // valid for CFDP: transaction id;
  // for the incoming transfers it is assigned by the remote peer so therefore might not be unique
  optional TransactionId transactionId = 12;
  
  // when the transfer has been created. 
  optional google.protobuf.Timestamp creationTime = 13;

  // depending on the implementation, can mean normal file transfer, directory listing request, file download request, etc.
  optional string transferType = 14;

  // Local entity, may be empty if there is only one such entity.
  optional EntityInfo localEntity = 15;

  // Remote entity, may be empty if there is only one such entity.
  optional EntityInfo remoteEntity = 16;
}

message CreateTransferRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 8;

  // **Required** One of ``UPLOAD`` or ``DOWNLOAD``.
  optional TransferDirection direction = 2;

  // **Required** The bucket containing the local Yamcs object.
  optional string bucket = 3;
  
  // **Required** The object name in Yamcs bucket storage. For UPLOAD transfers,
  // this object must exist and is what Yamcs will transfer to the remote
  // entity. For DOWNLOAD transfers, it refers to the object that
  // Yamcs will write to when downloading from a remote entity.
  optional string objectName = 4;
  
  // **Required** The path at the remote entity. Example: ``a/local/path/some_filename``.
  optional string remotePath = 5;
  
  //used to derive the source entity id
  optional string source = 9;

  //used to derive the destination entity id
  optional string destination = 10;

  // Options for the transfer
  optional google.protobuf.Struct options = 11;
}

message PauseTransferRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 3;

  // Transfer identifier (assigned by Yamcs)
  optional int64 id = 2;
}

message CancelTransferRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 3;

  // Transfer identifier (assigned by Yamcs)
  optional int64 id = 2;
}

message ResumeTransferRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 3;

  // Transfer identifier (assigned by Yamcs)
  optional int64 id = 2;
}

message ListTransfersRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 2;

  // Filter the lower bound of the transfer's creation time.
  // Specify a date string in ISO 8601 format. This bound is
  // inclusive.
  optional google.protobuf.Timestamp start = 3;
  
  // Filter the upper bound of the transfer's creation time.
  // Specify a date string in ISO 8601 format. This bound is
  // exclusive.
  optional google.protobuf.Timestamp stop = 4;

  // Filter by local entity identifier
  optional int64 localEntityId = 5;

  // Filter by remote entity identifier
  optional int64 remoteEntityId = 6;

  // Filter by transfer state. Leave empty to return any.
  repeated TransferState state = 7;

  // Filter by transfer direction (UPLOAD or DOWNLOAD)
  optional TransferDirection direction = 8;

  // The maximum number of returned records per page. Choose this value too high
  // and you risk hitting the maximum response size limit enforced by the server.
  // Default: ``100``
  optional int32 limit = 9;

  // The order of the returned results. Can be either ``asc`` or ``desc``.
  // Default: ``desc``
  optional string order = 10;
}

message GetTransferRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 3;

  // Transfer identifier (assigned by Yamcs)
  optional int64 id = 2;
}

message ListTransfersResponse {
  repeated TransferInfo transfers = 1;
}

message SubscribeTransfersRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 2;

  // If true, send info on all currently ongoing transfers,
  // as well as any future updates (recommended).
  //
  // For legacy reasons, the default is ``false``, which will
  // send also finished transfers upon subscription. This behaviour
  // is due for removal in a future release (if you want to receive
  // past transfers, do a GET request).
  optional bool ongoingOnly = 3;
}

message ListFilesRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 2;

  // Entity from which to get the file list
  optional string source = 3;

  // Entity from which to get the file list
  optional string destination = 4;

  // Path of folder to list files from
  optional string remotePath = 5;

  // Options for the transfer
  optional google.protobuf.Struct options = 6;
}

message RemoteFile {

  // File identifier
  //
  // Typically, a remote file path, or a filename
  // in case of a flat file table.
  optional string name = 1;

  // Optional display name. Can be used when the ``name``
  // field contains information that should be hidden from the user.
  optional string displayName = 5;

  // True if the path represents a directory
  optional bool isDirectory = 2;

  // File size
  optional uint64 size = 3;

  // Modification time
  optional google.protobuf.Timestamp modified = 4;

  // Implementation-specific fields
  optional google.protobuf.Struct extra = 6;
}

message ListFilesResponse {
  repeated RemoteFile files = 1;
  optional string destination = 2;
  optional string remotePath = 3;
  optional google.protobuf.Timestamp listTime = 4;
  optional string state = 5;

  // Progress message, in case the file listing is still underway
  optional string progressMessage = 6;
}

message RunFileActionRequest {
  // Yamcs instance name
  optional string instance = 1;

  // File transfer service name
  optional string serviceName = 2;

  // Remote entity
  optional string remoteEntity = 3;

  // File identifier
  optional string file = 4;

  // Action name
  optional string action = 5;

  // Action message
  optional google.protobuf.Struct message = 6;
}

/*
CUSTOMISABLE FILE TRANSFER OPTIONS
*/
message FileTransferOption {
  enum Type {
    // Shown as checkbox in the UI
    BOOLEAN = 0;
    // Shown as a number field or drop-down if values is specified
    DOUBLE = 1;
    // Shown as text field or drop-down if values is specified
    STRING = 2;
  }

  // Identifier
  optional string name = 1;
  // Option type
  optional Type type = 2;
  // Title for the option
  optional string title = 3;
  // Help text shown on hover
  optional string description = 4;
  // Placeholder for fields and label for checkboxes
  optional string associatedText = 5;
  // Default value for the field
  optional string default = 6;
  // Values for potential dropdown menu
  repeated Value values = 7;
  // Whether a custom field is needed when using the drop-down menu
  optional bool allowCustomOption = 8;

  message Value {
    // Real value for the option (used to sent to the server)
    optional string value = 1;
    // Display name for the value
    optional string verboseName = 2;
  }
}
